public/CSS/folderarea.css
section#folder-area{
	display:flex;
	width:100%;
	height:100%;
	justify-content:center;
}

section#folder-area div#scrollable-area{
	height:70%;
	width:100%;
	overflow:scroll;
	margin:0;
}

ul#directory{
	list-style-type:none;
	margin:0;
	padding:0;
}

ul#directory li{
	height:2em;
	display:grid;
	overflow:hidden;
	white-space:nowrap;
	text-overflow: ellipsis;
	grid-template-columns: 80% 20%;
	border-bottom: 1px solid black;
}

ul#directory li *{
	margin-top:auto;
	margin-bottom:auto;
}

ul#directory li span.buttons-group a img{
	margin-left:auto;
	margin-right:auto;
}

ul#directory li span.buttons-group a{
	margin-left:1em;
}

ul#directory li img{
	height: 1em;
}

@media(max-width:600px){
	ul#directory li{
		grid-template-columns: 70% 30%;
	}
}

